Moves method isDigit into super class.